# chord-extractor-api

./: .dockerignore  .env.prod.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  pixi.toml  pyproject.toml
.github/workflows/: build-image.yml
app/: downloader.py  extractor.py  main.py  schemas.py
tests/: test_health.py
