[project]
name = "chord-extractor-api"
version = "0.1.0"
description = "HTTP API to extract chords from audio files"
requires-python = ">=3.11,<3.12"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
